Grease pencil sorting issues (backfacing/doublesided) #57859

Closed
opened 2018-11-16 02:12:00 +01:00 by Frederic Lierman · 4 comments

System Information
Windows 10 64-bit
nvidia geforce gtx 1080

Blender Version
Broken: 2.8 c94f806dc7

Short description of error
When drawing strokes in different locations in 3D space at different location causes visual sorting issues when multiple strokes/fills overlap each other based on the camera angle.
The system seems to work so that the last stroke always draws on top of previous ones (unless that option is inverted) regardless of the camera angle and stroke position in 3d space.

I'm not certain if this is intentional. But the visual artifacts this causes significantly impacts the visual representation and quality when used in 3D space.
e.g.: when drawing over a 3D mesh.

gp_sortingissue-02.gif
sortingissue

Exact steps for others to reproduce the error

  • Draw a stroke
  • Draw another stroke somewhere behind the the stroke in 3d space
  • Move the camera so both strokes are overlapping visually
    (if the strokes are 100% strength you need to place a mesh in between the two strokes to see the problem, or add fill to the material)
  • Rotate the camera to look from the opposite side. (depending on which stroke was drawn first)
**System Information** Windows 10 64-bit nvidia geforce gtx 1080 **Blender Version** Broken: 2.8 c94f806dc73 **Short description of error** When drawing strokes in different locations in 3D space at different location causes visual sorting issues when multiple strokes/fills overlap each other based on the camera angle. The system seems to work so that the last stroke always draws on top of previous ones (unless that option is inverted) regardless of the camera angle and stroke position in 3d space. I'm not certain if this is intentional. But the visual artifacts this causes significantly impacts the visual representation and quality when used in 3D space. e.g.: when drawing over a 3D mesh. ![gp_sortingissue-02.gif](https://archive.blender.org/developer/F5577050/gp_sortingissue-02.gif) [sortingissue ](https://i.imgur.com/8vcRzKx.gifv) **Exact steps for others to reproduce the error** - Draw a stroke - Draw another stroke somewhere behind the the stroke in 3d space - Move the camera so both strokes are overlapping visually (if the strokes are 100% strength you need to place a mesh in between the two strokes to see the problem, or add fill to the material) - Rotate the camera to look from the opposite side. (depending on which stroke was drawn first)

Added subscriber: @FredLierman

Added subscriber: @FredLierman

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2018-11-16 08:27:16 +01:00

This is know limitation that need implement OIT to be solved.

This is know limitation that need implement OIT to be solved.
Antonio Vazquez was unassigned by Dalai Felinto 2019-12-23 16:35:51 +01:00

Closed as duplicate of #66293

Closed as duplicate of #66293
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57859
No description provided.