source/blender/draw/engines/gpencil/gpencil_draw_utils.c
@@ -302,6 +302,8 @@ static DRWShadingGroup *DRW_gpencil_shgroup_fill_create(
 	DRW_shgroup_uniform_int(grp, "texture_flip", &stl->shgroups[id].texture_flip, 1);
 
 	DRW_shgroup_uniform_int(grp, "xraymode", (const int *) &gpd->xray_mode, 1);
+	DRW_shgroup_uniform_int(grp, "drawmode", (const int *) &gpd->draw_mode, 1);
+
 	/* image texture */
 	if ((gp_style->flag & GP_STYLE_COLOR_TEX_MIX) ||
 	    (gp_style->fill_style & GP_STYLE_FILL_STYLE_TEXTURE))
@@ -1306,6 +1308,7 @@ static void DRW_gpencil_shgroups_create(
 	GPENCIL_StorageList *stl = ((GPENCIL_Data *)vedata)->stl;
 	GPENCIL_PassList *psl = ((GPENCIL_Data *)vedata)->psl;
 	bGPdata *gpd = (bGPdata *)ob->data;
+	DRWPass *stroke_pass = GPENCIL_3D_DRAWMODE(gpd) ? psl->stroke_pass_3d : psl->stroke_pass_2d;
 
 	GpencilBatchGroup *elm = NULL;
 	DRWShadingGroup *shgrp = NULL;
@@ -1364,7 +1367,7 @@ static void DRW_gpencil_shgroups_create(
 				const int len = elm->vertex_idx - start_stroke;
 
 				shgrp = DRW_gpencil_shgroup_stroke_create(
-				        e_data, vedata, psl->stroke_pass, e_data->gpencil_stroke_sh,
+				        e_data, vedata, stroke_pass, e_data->gpencil_stroke_sh,
 				        ob, gpd, gps, gp_style, stl->storage->shgroup_id, elm->onion, scale);
 
 				DRW_shgroup_call_range_add(
@@ -1381,7 +1384,7 @@ static void DRW_gpencil_shgroups_create(
 				const int len = elm->vertex_idx - start_point;
 
 				shgrp = DRW_gpencil_shgroup_point_create(
-				        e_data, vedata, psl->stroke_pass, e_data->gpencil_point_sh,
+				        e_data, vedata, stroke_pass, e_data->gpencil_point_sh,
 				        ob, gpd, gp_style, stl->storage->shgroup_id, elm->onion, scale);
 
 				DRW_shgroup_call_range_add(
@@ -1398,7 +1401,7 @@ static void DRW_gpencil_shgroups_create(
 				const int len = elm->vertex_idx - start_fill;
 
 				shgrp = DRW_gpencil_shgroup_fill_create(
-				        e_data, vedata, psl->stroke_pass, e_data->gpencil_fill_sh,
+				        e_data, vedata, stroke_pass, e_data->gpencil_fill_sh,
 				        gpd, gpl, gp_style, stl->storage->shgroup_id);
 
 				DRW_shgroup_call_range_add(
